samples/_failures_safe/1761400252_9f3151_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db3c5433.c: In function ‘main’:
./samples/SAFE/__tmp_db3c5433.c:153:19: error: missing terminating " character
  153 |         if (scanf("%d %d
      |                   ^~~~~~
./samples/SAFE/__tmp_db3c5433.c:153:9: error: expected expression at end of input
  153 |         if (scanf("%d %d
      |         ^~
./samples/SAFE/__tmp_db3c5433.c:153:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_db3c5433.c:153:9: error: expected declaration or statement at end of input
